--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,7 @@
 　　<head>
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　<title>{{ page.title }}</title>
+        <script src="/js/jquery-1.7.1.min.js" type="text/javascript"></script>
 　　</head>
 　　<body>
 
