--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -3,6 +3,9 @@
 　　<head>
 　　　　<meta http-equiv="content-type" content="text/html; charset=utf-8" />
 　　　　<title>{{ page.title }}</title>
+        <meta name="author" content="allen2660" />
+        <meta name="renderer" content="webkit">
+        <meta name="description" content="Allen2660's Blog" />
         <meta name="viewport" content="width=device-width, initial-scale=1.0, minimum-scale=1.0">
         <link rel="stylesheet" href="/css/default.css" type="text/css" />
         <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon" />
@@ -11,6 +14,17 @@
 　　</head>
 　　<body>
 
+        <div class="home-menu">
+            <div class="home-icon-con">
+                <a class="home-menu-icon" href="/">BeiYuu</a>
+                <a class="home-follow" href="#" title="Contact Me">+</a>
+            </div>
+            <div class="home-contact">
+                <a href="http://weibo.com/allen2660/" target="_blank" style="margin-left:-5px;"><img src="http://www.weibo.com/favicon.ico" alt="" width="25"/></a>
+                <a href="http://www.douban.com/people/3754832/" target="_blank" style="text-align:center;"><img src="http://www.douban.com/favicon.ico" alt="" width="22"/></a>
+                <a href="http://instagram.com/allen2660/" target="_blank" style="text-align:right"><img src="http://d36xtkk24g8jdx.cloudfront.net/bluebar/00c6602/images/ico/favicon.ico" alt="" width="22"/></a>
+            </div>
+        </div>
 　　　　{{ content }}
 
 　　</body>
