--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,5 +27,20 @@
         </div>
 　　　　{{ content }}
 
+
+        <!-- 下面是控制home-contact打开关闭的js -->
+        <script type="text/javascript">
+            $(function(){
+                $('.home-follow').click(function(e){
+                    e.preventDefault(); 
+
+                    if($('.home-contact').is(':visible')){
+                        $('.home-contact').slideUp(100);
+                    }else{
+                        $('.home-contact').slideDown(100);
+                    }
+                });
+            })
+        </script>
 　　</body>
 　　</html>
