--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -33,9 +33,9 @@
             $(function(){
                 $('.home-follow').click(function(e){
                     if($('.home-follow').css("display") == "block"){
-                        $('.home-follow').css("display":"none");
+                        $('.home-follow').css("display","none");
                     }else{
-                        $('.home-follow').css("display":"block");
+                        $('.home-follow').css("display","block");
                     }
                     e.preventDefault(); 
 
